# ariadne

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/ariadne/: __init__.py
src/ariadne/core/: __init__.py  error.py  graph.py  logging.py  metadata.py  node.py  parallel.py  report.py  serialization.py  trace.py
tests/: test_properties.py
