[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ariadne"
dynamic = ["version"]
description = "A framework for defining, executing, and resuming typed state transition systems for AI agent workflows"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.151.9",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
]

[tool.hatch.version]
path = "src/ariadne/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ariadne"]
